--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@sentry/browser": "^5.10.2",
+    "@sentry/integrations": "^5.10.2",
     "core-js": "^2.6.5",
+    "decimal.js": "^10.2.0",
     "electron-updater": "^4.2.0",
+    "lodash.debounce": "^4.0.8",
     "v-contextmenu": "^2.8.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
